// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StockFilterToolbar — snapshot visual do Risco de Ruptura > estado OFF + count=0 (Switch indisponível) 1`] = `
<button
  aria-controls="radix-:r4:"
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="Filtro de Risco de Ruptura desligado"
  aria-pressed="false"
  class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm ring-offset-background transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 touch-manipulation active:scale-[0.96] hover:-translate-y-0.5 hover:shadow-lg border-2 border-primary/30 bg-background hover:border-primary hover:bg-primary/5 active:bg-primary/10 active:shadow-inner h-10 px-4 py-2 min-h-[44px] relative gap-2 font-normal text-muted-foreground hover:text-foreground"
  data-state="closed"
  data-testid="rupture-horizon-control"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-trending-down h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="22 17 13.5 8.5 8.5 13.5 2 7"
    />
    <polyline
      points="16 17 22 17 22 11"
    />
  </svg>
  <span
    class="hidden sm:inline"
  >
    Risco
  </span>
</button>
`;

exports[`StockFilterToolbar — snapshot visual do Risco de Ruptura > estado OFF + count>0 (Switch habilitado, sem badge) 1`] = `
<button
  aria-controls="radix-:re:"
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="Filtro de Risco de Ruptura desligado"
  aria-pressed="false"
  class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm ring-offset-background transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 touch-manipulation active:scale-[0.96] hover:-translate-y-0.5 hover:shadow-lg border-2 border-primary/30 bg-background hover:border-primary hover:bg-primary/5 active:bg-primary/10 active:shadow-inner h-10 px-4 py-2 min-h-[44px] relative gap-2 font-normal text-muted-foreground hover:text-foreground"
  data-state="closed"
  data-testid="rupture-horizon-control"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-trending-down h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="22 17 13.5 8.5 8.5 13.5 2 7"
    />
    <polyline
      points="16 17 22 17 22 11"
    />
  </svg>
  <span
    class="hidden sm:inline"
  >
    Risco
  </span>
</button>
`;

exports[`StockFilterToolbar — snapshot visual do Risco de Ruptura > estado ON + count>0 (badge visível com "Nd") 1`] = `
<button
  aria-controls="radix-:ro:"
  aria-expanded="false"
  aria-haspopup="dialog"
  aria-label="Risco de Ruptura ativo, janela 3 dias"
  aria-pressed="true"
  class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm ring-offset-background transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 touch-manipulation active:scale-[0.96] hover:-translate-y-0.5 hover:shadow-lg border-2 bg-background hover:border-primary hover:bg-primary/5 active:bg-primary/10 active:shadow-inner h-10 px-4 py-2 min-h-[44px] relative gap-2 font-normal hover:text-foreground border-border/60 text-foreground [&_svg]:text-primary"
  data-state="closed"
  data-testid="rupture-horizon-control"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-trending-down h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="22 17 13.5 8.5 8.5 13.5 2 7"
    />
    <polyline
      points="16 17 22 17 22 11"
    />
  </svg>
  <span
    class="hidden sm:inline"
  >
    Risco
  </span>
  <span
    aria-hidden="true"
    class="ml-0.5 rounded-sm border border-border/60 px-1.5 py-0.5 text-[10px] font-medium text-muted-foreground"
    data-testid="rupture-risk-horizon-badge"
  >
    3
    d
  </span>
</button>
`;

exports[`StockFilterToolbar — snapshot visual do Risco de Ruptura > popover aberto + ON — Switch checked + radiogroup de horizonte 1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <div
      class="space-y-3"
    >
      <div
        class="flex flex-col gap-2 sm:flex-row"
      >
        <span
          aria-label="Ajuda: Filtros"
          class="inline-flex"
          data-state="closed"
        >
          <button
            aria-controls="radix-:ru:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm font-bold ring-offset-background transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 touch-manipulation active:scale-[0.96] hover:-translate-y-0.5 hover:shadow-lg border-2 border-primary/30 bg-background text-primary hover:border-primary hover:bg-primary/5 active:bg-primary/10 active:shadow-inner h-10 px-4 py-2 min-h-[44px] relative gap-2"
            data-state="closed"
            type="button"
          >
            <svg
              class="lucide lucide-sliders-horizontal h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="21"
                x2="14"
                y1="4"
                y2="4"
              />
              <line
                x1="10"
                x2="3"
                y1="4"
                y2="4"
              />
              <line
                x1="21"
                x2="12"
                y1="12"
                y2="12"
              />
              <line
                x1="8"
                x2="3"
                y1="12"
                y2="12"
              />
              <line
                x1="21"
                x2="16"
                y1="20"
                y2="20"
              />
              <line
                x1="12"
                x2="3"
                y1="20"
                y2="20"
              />
              <line
                x1="14"
                x2="14"
                y1="2"
                y2="6"
              />
              <line
                x1="8"
                x2="8"
                y1="10"
                y2="14"
              />
              <line
                x1="16"
                x2="16"
                y1="18"
                y2="22"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Filtros
            </span>
          </button>
        </span>
        <span
          aria-label="Ajuda: Em Estoque / Estoque Futuro"
          class="inline-flex"
          data-state="closed"
        >
          <button
            aria-controls="radix-:r10:"
            aria-expanded="false"
            aria-haspopup="dialog"
            aria-label="Considerando apenas estoque atual. Atalho Shift+F para incluir Estoque Futuro"
            aria-pressed="false"
            class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm ring-offset-background transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 touch-manipulation active:scale-[0.96] hover:-translate-y-0.5 hover:shadow-lg border-2 border-primary/30 bg-background hover:border-primary hover:bg-primary/5 active:bg-primary/10 active:shadow-inner h-10 px-4 py-2 min-h-[44px] relative gap-2 font-normal text-muted-foreground hover:text-foreground"
            data-state="closed"
            data-testid="future-stock-toggle-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"
              />
              <path
                d="M5 3v4"
              />
              <path
                d="M19 17v4"
              />
              <path
                d="M3 5h4"
              />
              <path
                d="M17 19h4"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Em Estoque
            </span>
          </button>
        </span>
        <span
          aria-label="Ajuda: Risco de Ruptura"
          class="inline-flex"
          data-state="closed"
        >
          <button
            aria-controls="radix-:r12:"
            aria-expanded="true"
            aria-haspopup="dialog"
            aria-label="Risco de Ruptura ativo, janela 3 dias"
            aria-pressed="true"
            class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm ring-offset-background transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 touch-manipulation active:scale-[0.96] hover:-translate-y-0.5 hover:shadow-lg border-2 bg-background hover:border-primary hover:bg-primary/5 active:bg-primary/10 active:shadow-inner h-10 px-4 py-2 min-h-[44px] relative gap-2 font-normal hover:text-foreground border-border/60 text-foreground [&_svg]:text-primary"
            data-state="open"
            data-testid="rupture-horizon-control"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-down h-3.5 w-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 17 13.5 8.5 8.5 13.5 2 7"
              />
              <polyline
                points="16 17 22 17 22 11"
              />
            </svg>
            <span
              class="hidden sm:inline"
            >
              Risco
            </span>
            <span
              aria-hidden="true"
              class="ml-0.5 rounded-sm border border-border/60 px-1.5 py-0.5 text-[10px] font-medium text-muted-foreground"
              data-testid="rupture-risk-horizon-badge"
            >
              3
              d
            </span>
          </button>
        </span>
        <span
          aria-label="Ajuda: Preciso de X unidades"
          class="inline-flex"
          data-state="closed"
        >
          <div
            class="relative w-full sm:w-48"
          >
            <svg
              class="lucide lucide-shopping-cart absolute left-3 top-1/2 h-4 w-4 -translate-y-1/2 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="21"
                r="1"
              />
              <circle
                cx="19"
                cy="21"
                r="1"
              />
              <path
                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
              />
            </svg>
            <input
              class="flex h-11 w-full rounded-lg border border-border bg-background px-4 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground font-medium placeholder:text-muted-foreground/60 focus-visible:border-primary focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-primary/20 shadow-soft transition-all duration-300 hover:border-border-strong hover:shadow-medium disabled:cursor-not-allowed disabled:opacity-50 pl-9"
              id=":r15:"
              min="0"
              name=":r15:"
              placeholder="Preciso de X un..."
              type="number"
              value=""
            />
          </div>
        </span>
        <span
          aria-label="Ajuda: Buscar produto"
          class="inline-flex"
          data-state="closed"
        >
          <div
            class="relative flex max-w-md flex-1 items-center gap-2"
          >
            <div
              class="relative flex-1"
            >
              <input
                aria-label="Buscar no Estoque por Nome, SKU ou Cor"
                class="flex h-11 w-full rounded-lg border border-border bg-background px-4 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground font-medium placeholder:text-muted-foreground/60 focus-visible:border-primary focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-primary/20 shadow-soft transition-all duration-300 hover:border-border-strong hover:shadow-medium disabled:cursor-not-allowed disabled:opacity-50 pr-8"
                id=":r17:"
                name=":r17:"
                placeholder="Buscar no Estoque (Nome, SKU ou Cor)... "
                value=""
              />
            </div>
            <button
              aria-busy="false"
              aria-label="Aplicar busca no estoque"
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-bold ring-offset-background transition-all duration-300 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 touch-manipulation active:scale-[0.96] hover:-translate-y-0.5 hover:shadow-lg bg-primary text-primary-foreground hover:bg-primary-hover active:bg-primary-active shadow-sm active:shadow-inner border border-primary/20 h-9 rounded-lg px-3 min-h-[36px] shrink-0"
              data-testid="stock-search-button"
              disabled=""
              title="Aplicar busca (Enter)"
              type="button"
            >
              <span>
                Busca
              </span>
            </button>
          </div>
        </span>
        <div
          class="order-last ml-auto flex w-full items-center justify-end sm:w-auto"
          data-testid="stock-toolbar-slot"
          id="stock-toolbar-slot"
        />
      </div>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content; z-index: auto;"
  >
    <div
      class="z-50 rounded-xl border-2 bg-popover text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 w-72 p-0"
      data-align="start"
      data-side="bottom"
      data-state="open"
      id="radix-:r12:"
      role="dialog"
      style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height); animation: none;"
      tabindex="-1"
    >
      <div
        class="space-y-2 px-3 py-2.5"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <label
            class="transition-all duration-200 peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:text-primary active:opacity-80 flex cursor-pointer items-center gap-1.5 text-xs font-medium text-foreground"
            for="rupture-risk-switch"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-down h-3.5 w-3.5 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 17 13.5 8.5 8.5 13.5 2 7"
              />
              <polyline
                points="16 17 22 17 22 11"
              />
            </svg>
            Mostrar só Risco de Ruptura
          </label>
          <button
            aria-checked="true"
            aria-label="Filtrar somente SKUs em risco de ruptura"
            class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-all duration-300 focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-primary/20 focus-visible:ring-offset-0 active:scale-90 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-muted"
            data-state="checked"
            data-testid="rupture-risk-switch"
            id="rupture-risk-switch"
            role="switch"
            type="button"
            value="on"
          >
            <span
              class="pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-all duration-200 data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0 data-[state=checked]:scale-110 data-[state=unchecked]:scale-100"
              data-state="checked"
            />
          </button>
        </div>
        <p
          class="text-[11px] leading-snug text-muted-foreground"
        >
          Mostrando apenas SKUs que podem zerar em 3 dias.
        </p>
      </div>
      <div
        class="space-y-1.5 border-t border-border/40 px-3 py-2.5"
      >
        <span
          class="text-[10px] uppercase tracking-wide text-muted-foreground"
          id="rupture-horizon-label"
        >
          Horizonte de projeção
        </span>
        <div
          aria-labelledby="rupture-horizon-label"
          class="grid grid-cols-4 gap-1"
          role="radiogroup"
        >
          <button
            aria-checked="true"
            class="h-7 rounded-md border text-xs transition-colors border-foreground/30 bg-muted/60 font-medium text-foreground"
            data-testid="rupture-horizon-3"
            role="radio"
            type="button"
          >
            3
            d
          </button>
          <button
            aria-checked="false"
            class="h-7 rounded-md border text-xs transition-colors border-border/40 text-muted-foreground hover:border-border hover:text-foreground"
            data-testid="rupture-horizon-7"
            role="radio"
            type="button"
          >
            7
            d
          </button>
          <button
            aria-checked="false"
            class="h-7 rounded-md border text-xs transition-colors border-border/40 text-muted-foreground hover:border-border hover:text-foreground"
            data-testid="rupture-horizon-15"
            role="radio"
            type="button"
          >
            15
            d
          </button>
          <button
            aria-checked="false"
            class="h-7 rounded-md border text-xs transition-colors border-border/40 text-muted-foreground hover:border-border hover:text-foreground"
            data-testid="rupture-horizon-30"
            role="radio"
            type="button"
          >
            30
            d
          </button>
        </div>
      </div>
    </div>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
